--- a/index.css
+++ b/index.css
@@ -1,59 +1,29 @@
-* {
-  margin: 0px;
-  padding: 0px;
+*{
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-}
-body {
-  background-color: lightblue;
-  min-height: 100vh;
-  overflow-x: hidden;
+  
 }
 
-.products {
+
+.shopping-cart-list{
   position: absolute;
-  padding: 0.2rem;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(390px, 1fr));
-  row-gap: 10px;
-  width: 95vw;
-  margin: 10px 50px;
+  width: 25rem;
+  right: -0.75rem;
+  top: 2.9rem;
+  padding: 1rem;
+  z-index: 1;
 }
 
-.product {
-    position: relative;
-    height: 500px;
-    width: 390px;
-    background: white;
-    padding: 0 0.5rem;
-    line-height: 25px;
-}
-.product img{
-    width: 380px;
-    height: 400px;
-    border-bottom: 1px dashed black;
-    object-fit: scale-down;
+.shopping-cart-list .list-item{
+  margin-top: 1rem;
 }
 
-.hudhe{
-    position: absolute;
-    padding: 00.5rem 0.5rem;
-    background: orange;
-    color: white;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    font-weight: bold;
-    font-size: 1.2rem;
-    right: 10px;
-    bottom: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s ease;
-}
-.hudhe:hover{
-    background-color: darkorange;
+#sepet{
+  margin-right: 3px;
+
 }
 
-.hudhe i{
-  margin-left: 5px;
+.btn-primary{
+  border-color: black;
 }
